Bunch of engine modifications.  Added animations, jumping, physics, etc to floppy horse example

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,3 +3,5 @@ version: 0.0.4
 author: Kyle Racette
 description: A pub package
 homepage: https://github.com/morendi/engine
+dependencies:
+  browser: any
